--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </license>
   </licenses>
 
-  <version>0.0.78</version>
+  <version>0.0.79</version>
   <name>openshapa-lib</name>
   <url>http://openshapa.org</url>  
 
@@ -37,7 +37,7 @@
   <!-- Our source control. -->
   <scm>
     <tag>master</tag>
-    <url>http://openshapa.org/viewgit/?a=summary&amp;p=openshapa-lib</url>
+    <url>https://github.com/OpenSHAPA/openshapa-lib</url>
   </scm>
 
   <!-- The location for generating the website. -->
