--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openshapa</groupId>
-  <artifactId>openshapa-lib</artifactId>
+  <groupId>org.datavyu</groupId>
+  <artifactId>datavyu-lib</artifactId>
   <packaging>jar</packaging>
   <!--
 
@@ -25,7 +25,7 @@
   </licenses>
 
   <version>0.0.81</version>
-  <name>openshapa-lib</name>
+  <name>datavyu-lib</name>
   <url>http://openshapa.org</url>  
 
   <!-- Our organisation. -->
