--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
 
   <!-- The location for generating the website. -->
   <distributionManagement>
-    <repository>
-      <id>repo</id>
-      <name>openshapa-lib</name>      
-      <url>scp://openshapa.org/var/www/maven2</url>
-    </repository>
+
+      <repository>
+          <id>repo</id>
+          <url>scpexe://datavyu.org:777/var/www/datavyu/maven2</url>
+      </repository>
   </distributionManagement>
 
   <!-- External repositories - where to find third-party dependencies. -->
@@ -93,7 +93,16 @@
 
   <!-- Build properties. -->
   <build>
-    <plugins>
+      <extensions>
+          <!-- Enabling the use of FTP -->
+          <extension>
+              <groupId>org.apache.maven.wagon</groupId>
+              <artifactId>wagon-ssh-external</artifactId>
+              <version>1.0-beta-6</version>
+          </extension>
+      </extensions>
+
+      <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -124,6 +133,5 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
 
